--- a/index.html
+++ b/index.html
@@ -7,28 +7,51 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Coffee!</h1>
+<div class="page-wrapper">
+    <nav class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Coffee!</h1>
 
-    <form>
-        <label for="roast-selection"></label>
-        <select id="roast-selection">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <input id="submit" type="submit" />
-    </form>
+                <form>
+                    <label for="roast-selection"></label>
+                    <select id="roast-selection">
+                        <option>light</option>
+                        <option>medium</option>
+                        <option>dark</option>
+                    </select>
+                    <input id="submit" type="submit" />
+                </form>
+            </div>
+        </div>
+    </nav>
+    <main class="container">
+        <div class="row">
+            <header class="col d-flex justify-content-between align-items-center">
+                    <p class="col-6">Name</p>
+                    <p class="col-6">Roast</p>
+            </header>
+<!--            dummy div-->
+            <div data-id="14" class="col d-flex justify-content-between align-items-center flex-row">
+                        <p class="col-6">French</p>
+                        <p class="col-6">Dark</p>
+            </div>
+        </div>
+    </main>
+</div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>ROAST</th>
-            </tr>
-        </thead>
-        <tbody id="coffees"></tbody>
-    </table>
+
+
+<!--    <table>-->
+<!--        <thead>-->
+<!--            <tr>-->
+<!--                <th>ID</th>-->
+<!--                <th>NAME</th>-->
+<!--                <th>ROAST</th>-->
+<!--            </tr>-->
+<!--        </thead>-->
+<!--        <tbody id="coffees"></tbody>-->
+<!--    </table>-->
 
     <script src="./js/main.js"></script>
 </body>
