--- a/index.html
+++ b/index.html
@@ -26,32 +26,16 @@
         </div>
     </nav>
     <main class="container">
-        <div class="row">
+        <div class="row flex-column">
             <header class="col d-flex justify-content-between align-items-center">
                     <p class="col-6">Name</p>
                     <p class="col-6">Roast</p>
             </header>
-<!--            dummy div-->
-            <div data-id="14" class="col d-flex justify-content-between align-items-center flex-row">
-                        <p class="col-6">French</p>
-                        <p class="col-6">Dark</p>
+            <div id="coffee-body" class="col d-flex justify-content-between align-items-center flex-column">
             </div>
         </div>
     </main>
 </div>
-
-
-
-<!--    <table>-->
-<!--        <thead>-->
-<!--            <tr>-->
-<!--                <th>ID</th>-->
-<!--                <th>NAME</th>-->
-<!--                <th>ROAST</th>-->
-<!--            </tr>-->
-<!--        </thead>-->
-<!--        <tbody id="coffees"></tbody>-->
-<!--    </table>-->
 
     <script src="./js/main.js"></script>
 </body>
