--- a/index.html
+++ b/index.html
@@ -12,16 +12,12 @@
         <div class="row">
             <div class="col">
                 <h1>Coffee!</h1>
-
-                <form>
-                    <label for="roast-selection"></label>
-                    <select id="roast-selection">
-                        <option>light</option>
-                        <option>medium</option>
-                        <option>dark</option>
-                    </select>
-                    <input id="submit" type="submit" />
-                </form>
+                <select id=" roast-selection">
+                    <option value="all" selected>ALL</option>
+                    <option value="light">light</option>
+                    <option value="medium">medium</option>
+                    <option value="dark">dark</option>
+                </select>
             </div>
         </div>
     </nav>
