--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="row">
             <div class="col">
                 <h1>Coffee!</h1>
-                <select id=" roast-selection">
-                    <option value="all" selected>ALL</option>
+                <select id="roast-selection">
+                    <option value="all" selected>all</option>
                     <option value="light">light</option>
                     <option value="medium">medium</option>
                     <option value="dark">dark</option>
