--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="input-group input-group-md col-3">
                     <input id="search" type="search" placeholder="Search coffees...">
                 </div>
+                <button class="col-3">Add Coffee</button>
             </div>
         </div>
     </nav>
@@ -34,6 +35,21 @@
             </div>
         </div>
     </main>
+    <form class="coffee-form">
+        <div class="mb-3">
+            <label for="coffeename-input" class="form-label">Coffee Name</label>
+            <input type="text" class="form-control" id="coffeename-input">
+        </div>
+        <div class="mb-3">
+            <label for="coffeeroast-input" class="form-label">Roast</label>
+            <select id="coffeeroast-input">
+                <option value="light">light</option>
+                <option value="medium">medium</option>
+                <option value="dark">dark</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Coffee</button>
+    </form>
 </div>
 
     <script src="./js/main.js"></script>
