--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <div class="row">
             <h1>Coffee!</h1>
             <div class="col d-flex flex-row gap-2">
-                <input type="radio" class="btn-check" name="roast" id="all" autocomplete="off">
+                <input type="radio" class="btn-check" name="roast" value="all" autocomplete="off" id="all" checked>
                 <label class="btn btn-secondary" for="all">All</label>
-                <input type="radio" class="btn-check" name="roast" id="light" autocomplete="off">
-                <label class="btn btn-secondary" for="light">light</label>
-                <input type="radio" class="btn-check" name="roast" id="medium" autocomplete="off">
-                <label class="btn btn-secondary" for="medium">medium"</label>
-                <input type="radio" class="btn-check" name="roast" id="dark" autocomplete="off">
+                <input type="radio" class="btn-check" name="roast" id="light" autocomplete="off" value="light">
+                <label class="btn btn-secondary" for="light">Light</label>
+                <input type="radio" class="btn-check" name="roast" id="medium" autocomplete="off" value="medium">
+                <label class="btn btn-secondary" for="medium">Medium</label>
+                <input type="radio" class="btn-check" name="roast" id="dark" autocomplete="off" value="dark">
                 <label class="btn btn-secondary" for="dark">Dark</label>
                 <div class="input-group input-group-md col-3">
                     <input id="search" type="search" placeholder="Search coffees...">
