--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -20,10 +19,10 @@
                 <label class="btn btn-secondary" for="medium">Medium</label>
                 <input type="radio" class="btn-check" name="roast" id="dark" autocomplete="off" value="dark">
                 <label class="btn btn-secondary" for="dark">Dark</label>
+                <button id="form-btn" class="col-3">Add Coffee</button>
                 <div class="input-group input-group-md col-3">
                     <input id="search" type="search" placeholder="Search coffees...">
                 </div>
-                <button id="form-btn" class="col-3">Add Coffee</button>
             </div>
         </div>
     </nav>
@@ -33,7 +32,7 @@
                     <p class="col-6">Name</p>
                     <p class="col-6">Roast</p>
             </header>
-            <div id="coffee-body" class="col d-flex justify-content-between align-items-center flex-column">
+            <div id="coffee-body" class="col d-flex align-items-center flex-column">
             </div>
         </div>
     </main>
