--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <label class="btn btn-secondary" for="medium">Medium</label>
                 <input type="radio" class="btn-check" name="roast" id="dark" autocomplete="off" value="dark">
                 <label class="btn btn-secondary" for="dark">Dark</label>
-                <button id="form-btn" class="col-3">Add Coffee</button>
+                <button id="form-btn" class="col"><img id="cup" src="img/coffee-cup.png"></button>
                 <div class="input-group input-group-md col-3">
                     <input id="search" type="search" placeholder="Search coffees...">
                 </div>
