--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div class="page-wrapper">
     <nav class="container">
         <div class="row">
-            <h1>Coffee!</h1>
+            <h1>Devil Dog Coffee!</h1>
             <div class="col d-flex flex-row gap-2 justify-content-center">
                 <div class="btn-group gap-2 align-items-center">
                     <input type="radio" class="btn-check" name="roast" value="all" autocomplete="off" id="all" checked>
