--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
     <main class="container">
         <div class="row flex-column">
-            <header class="col d-flex justify-content-between align-items-center">
+            <header class="coffee-header col d-flex justify-content-between align-items-center">
                     <p class="col-6">Name</p>
                     <p class="col-6">Roast</p>
             </header>
