--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <div class="page-wrapper">
     <nav class="container">
         <div class="row">
+            <img id="logo" src="./img/bulldog2.png"/>
             <h1>Devil Dog Coffee!</h1>
             <div class="col d-flex flex-row gap-2 justify-content-center">
                 <div class="btn-group gap-2 align-items-center">
