--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="container">
         <div class="row">
             <img id="logo" src="./img/bulldog2.png"/>
-            <h1>Devil Dog Coffee!</h1>
+            <h1 id="coffee-title">Devil Dog Coffee!</h1>
             <div class="col d-flex flex-row gap-2 justify-content-center">
                 <div class="btn-group gap-2 align-items-center">
                     <input type="radio" class="btn-check" name="roast" value="all" autocomplete="off" id="all" checked>
