--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <label class="btn btn-secondary" for="dark">Dark</label>
                 </div>
                 <button id="form-btn"><img id="cup" src="img/coffee-cup.png"></button>
-                <div>
+                <div id="search-bar">
+                    <div id="spin" class="spinner-border spinner-border-md spin" role="status"></div>
                     <input id="search" type="search" placeholder="Search coffees...">
                 </div>
             </div>
