--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <input type="radio" class="btn-check" name="roast" id="dark" autocomplete="off" value="dark">
                     <label class="btn btn-secondary" for="dark">Dark</label>
                 </div>
-                <button id="form-btn"><img id="cup" src="img/coffee-cup.png"></button>
+                <button id="form-btn"><img id="cup" src="img/add_FILL0_wght400_GRAD0_opsz24.png"></button>
                 <div id="search-bar">
                     <div id="spin" class="spinner-border spinner-border-md spin" role="status"></div>
                     <input id="search" type="search" placeholder="Search coffees...">
@@ -61,8 +61,22 @@
         </div>
         <button type="submit" class="btn btn-primary">Add Coffee</button>
     </form>
+    <footer id="Footer">
+        <div class="container d-flex flex-row">
+            <div class="contact-info">
+                <h3>Contact Us</h3>
+                <p>Email: DevilDogCoffee@divil.com</p>
+                <p>Phone:(100) 171-1775</p>
+            </div>
+            <div class="social-media">
+                <h3>Follow Us</h3>
+                <a href="#" target="_blank">Facebook</a>
+                <a href="#" target="_blank">Twitter</a>
+                <a href="#" target="_blank">Instagram</a>
+            </div>
+        </div>
+    </footer>
 </div>
-
     <script src="./js/main.js"></script>
 </body>
 </html>
